turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:14: error: not found: value dir
  setCouleurBrosse(colors((dir+1)%(colors.length)))
                           ^Turmite:17: error: type mismatch;
 found   : java.awt.Color
 required: Int
  state= rule(state)(cou)(i)
                     ^Turmite:17: error: not found: value i
  state= rule(state)(cou)(i)
                          ^