turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
  var cou=getCouleurSol()
 	var mov=0
  var test =0
  for (i <- 0 to colors.length-1){
    if (cou==colors(i)){
      test = i
    }
  }
  setCouleurBrosse(colors((dir+1)%(colors.length)))
 	baisseBrosse()
 	leveBrosse()
  state= rule(state)(cou)(i)
  if (state==1){
    avance()
  }
  if (state==2) {
    gauche()
    avance()
  }
  if (state ==4){
    retourne()
    avance()
  }
  if (state==8){
    droite()
    avance()
  }
}

  
  